// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Container: <Wizard /> Snapshots should render without exploding on Frame 1 1`] = `
<Wizard>
  <div>
    <Frame
      fn={[Function]}
      name="activity"
      text="What activity are you working on?"
      value=""
    >
      <div>
        <SubTitle
          text="What activity are you working on?"
        >
          <h2>
            What activity are you working on?
          </h2>
        </SubTitle>
        <Input
          fn={[Function]}
          name="activity"
          value=""
        >
          <div>
            <input
              name="activity"
              onChange={[Function]}
              type="text"
              value=""
            />
          </div>
        </Input>
      </div>
    </Frame>
    <Button
      className="next"
      condition={false}
      fn={[Function]}
      text="Next"
    >
      <button
        className="next"
        disabled={false}
        onClick={[Function]}
      >
        Next
      </button>
    </Button>
    <Button
      className="prev"
      condition={true}
      fn={[Function]}
      text="Prev"
    >
      <button
        className="prev"
        disabled={true}
        onClick={[Function]}
      >
        Prev
      </button>
    </Button>
  </div>
</Wizard>
`;

exports[`Container: <Wizard /> Snapshots should render without exploding on Frame 2 1`] = `
<Wizard>
  <div>
    <Frame
      fn={[Function]}
      name="timer"
      text="How long should the timer be?"
      value=""
    >
      <div>
        <SubTitle
          text="How long should the timer be?"
        >
          <h2>
            How long should the timer be?
          </h2>
        </SubTitle>
        <Input
          fn={[Function]}
          name="timer"
          value=""
        >
          <div>
            <input
              name="timer"
              onChange={[Function]}
              type="text"
              value=""
            />
          </div>
        </Input>
      </div>
    </Frame>
    <Button
      className="next"
      condition={false}
      fn={[Function]}
      text="Next"
    >
      <button
        className="next"
        disabled={false}
        onClick={[Function]}
      >
        Next
      </button>
    </Button>
    <Button
      className="prev"
      condition={false}
      fn={[Function]}
      text="Prev"
    >
      <button
        className="prev"
        disabled={false}
        onClick={[Function]}
      >
        Prev
      </button>
    </Button>
  </div>
</Wizard>
`;

exports[`Container: <Wizard /> Snapshots should render without exploding on Frame 3 1`] = `
<Wizard>
  <div>
    <Frame
      fn={[Function]}
      name="cooldown"
      text="How long should the cooldown be?"
      value=""
    >
      <div>
        <SubTitle
          text="How long should the cooldown be?"
        >
          <h2>
            How long should the cooldown be?
          </h2>
        </SubTitle>
        <Input
          fn={[Function]}
          name="cooldown"
          value=""
        >
          <div>
            <input
              name="cooldown"
              onChange={[Function]}
              type="text"
              value=""
            />
          </div>
        </Input>
      </div>
    </Frame>
    <Button
      className="next"
      condition={false}
      fn={[Function]}
      text="Next"
    >
      <button
        className="next"
        disabled={false}
        onClick={[Function]}
      >
        Next
      </button>
    </Button>
    <Button
      className="prev"
      condition={false}
      fn={[Function]}
      text="Prev"
    >
      <button
        className="prev"
        disabled={false}
        onClick={[Function]}
      >
        Prev
      </button>
    </Button>
  </div>
</Wizard>
`;

exports[`Container: <Wizard /> Snapshots should render without exploding on Timer 1`] = `
<Wizard>
  <div>
    <Timer
      activity="coding"
      cooldown="3"
      timer="12"
    >
      <div>
        <h1>
          coding
        </h1>
        <h2>
          Selected Timer: 12:0
        </h2>
        <h2>
          Current Time: 12:0
        </h2>
        <h2>
          Selected Cooldown: 3:0
        </h2>
        <Button
          className="start"
          condition={false}
          fn={[Function]}
          text="Start"
        >
          <button
            className="start"
            disabled={false}
            onClick={[Function]}
          >
            Start
          </button>
        </Button>
        <Button
          className="pause"
          condition={false}
          fn={[Function]}
          text="Pause"
        >
          <button
            className="pause"
            disabled={false}
            onClick={[Function]}
          >
            Pause
          </button>
        </Button>
        <Button
          className="stop"
          condition={true}
          fn={[Function]}
          text="Stop"
        >
          <button
            className="stop"
            disabled={true}
            onClick={[Function]}
          >
            Stop
          </button>
        </Button>
      </div>
    </Timer>
    <Button
      className="next"
      condition={true}
      fn={[Function]}
      text="Next"
    >
      <button
        className="next"
        disabled={true}
        onClick={[Function]}
      >
        Next
      </button>
    </Button>
    <Button
      className="prev"
      condition={false}
      fn={[Function]}
      text="Prev"
    >
      <button
        className="prev"
        disabled={false}
        onClick={[Function]}
      >
        Prev
      </button>
    </Button>
  </div>
</Wizard>
`;
